Revert "Fix: Expand valuation header image to full width on mobile devices - …"

--- a/fengdie-landing-page-master/fengdie-landing-page-master/src/Home/static/responsive.less
+++ b/fengdie-landing-page-master/fengdie-landing-page-master/src/Home/static/responsive.less
@@ -81,9 +81,6 @@
       padding: 48px 16px 80px;
       .valuation-header {
         margin-bottom: 32px;
-              img {
-        max-width: 100%;
-      }
         gap: 12px;
       }
       .valuation-back {
